--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3"
   }
